[package]
name = "egui_winit_vulkano"
version = "0.23.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2018"
description = "Egui immediate mode gui integration with winit and Vulkano"
homepage = "https://github.com/hakolao/egui_winit_vulkano"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hakolao/egui_winit_vulkano"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[features]
default = ["clipboard", "links"]
links = ["egui-winit/links"]
clipboard = ["egui-winit/clipboard"]

[dependencies]
ahash = "0.8"
bytemuck = "1.12"
egui = "0.20"
egui-winit = { version = "0.20", default-features = false, features = ["wayland"]}
image = "0.24"
winit = { version = "0.27", default-features = false, features = ["x11", "wayland", "wayland-dlopen"]}
vulkano = "0.32"
vulkano-shaders = "0.32"

[dev-dependencies]
cgmath = "0.18.0"
egui_demo_lib = "0.20.0"
vulkano-util = "0.32"

[patch.crates-io]
vulkano = {git = "https://github.com/VideowindoW/vulkano", rev = "cccb62e"}
vulkano-shaders =  {git = "https://github.com/VideowindoW/vulkano", rev = "cccb62e"}
vulkano-win =  {git = "https://github.com/VideowindoW/vulkano", rev = "cccb62e"}
vulkano-util =  {git = "https://github.com/VideowindoW/vulkano", rev = "cccb62e"}